styles.css
body {
    font-family: sans-serif;
    color: #333;
    overflow-x: hidden;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}
* {
    box-sizing: border-box;
}
::marker {
    color: #d40d0d;
    font-size: 1.2em;
}
p {
    line-height: 1.7;
    margin-top: 20px;
    font-weight: 300;
}
h2 {
    font-weight: 400;
}
h2 span {
    white-space: nowrap;
}
@media (max-width: 768px) {
    h1, h2 {
        text-align: center;
    }
}
li {
    line-height: 1.7;
}

/* common */
.container {
    max-width: 800px;
    width: 100%;
    margin: auto;
    padding: 24px;
}
@media (max-width: 768px) {
    .container {
        padding: 24px 12px;
    }
}

/* top contacts */
.contacts {
    background: #22282e;
}
.contacts__container {
    padding-top: 12px;
    padding-bottom: 12px;
    color: #999;
    display: flex;
    align-items: center;
    font-size: 14px;
    line-height: 1;
    white-space: nowrap;
}
.contacts i:first-child {
    color: white;
    background-image: url("phone-1.svg");
    background-repeat: no-repeat;
    background-size: contain;
    width: 13px;
    height: 13px;
    overflow: hidden;
    text-indent: 100%;
    display: flex;
    margin-right: 3px;
}
.contacts i:last-child {
    color: white;
    background-image: url("mail-5.svg");
    background-repeat: no-repeat;
    background-size: contain;
    width: 16px;
    height: 16px;
    overflow: hidden;
    text-indent: 100%;
    display: flex;
    margin-right: 4px;
    margin-left: 16px;
}
.contacts svg {
    fill: white;
}

/* header */
.header {
    height: 80px;
    background: #2d363e;
    display: flex;
    align-items: center;
}
.header img {
    max-height: 36px;
}

/* menu */
.menu {
    font-size: 18px;
    font-weight: 500;
    color: white;
    display: flex;
    margin-left: auto;
    align-self: center;
}
.menu-item {
    margin-left: 50px;
    position: relative;
    padding: 12px;
    text-decoration: none;
    color: inherit;
}
.menu-item:hover {
    color: #d40d0d;
}
.menu-item:hover .sub-menu {
    opacity: 1;
    pointer-events: all;
}
@media (max-width: 768px) {
    .menu {
        position: absolute;
        width: 100vw;
        height: 100vh;
        left: 0;
        top: 0;
        display: flex;
        flex-direction: column;
        background: #2d363e;
        margin-top: 120px;
        z-index: 2;
    }
    .menu:not(.open) {
        display: none;
    }
    .menu-item {
        margin-left: 0;
        position: relative;
        padding: 12px;
        text-align: center;
    }
}

.sub-menu {
    opacity: 0;
    pointer-events: none;
    background-color: #22282e;
    position: absolute;
    top: 100%;
    left: 0;
    z-index: 1;
    padding: 12px 24px;
    margin-top: 0;
    margin-left: -12px;
    white-space: nowrap;
    line-height: 1.5;
}
@media (max-width: 768px) {
    .sub-menu {
        position: relative;
        opacity: 1;
        top: 0;
        margin-top: 12px;
        margin-right: -12px;
        line-height: 2;
    }
}
.sub-menu__item {
    color: white;
    cursor: pointer;
    text-decoration: none;
}
.sub-menu__item:hover {
    color: #d40d0d;
}

.hamburger {
    display: none;
}
@media (max-width: 768px) {
    .hamburger {
        width: 32px;
        height: 16px;
        margin-left: auto;
        display: flex;
        margin-top: 10px;
        box-shadow: 0 2px 0 white, 0 -2px 0 white;
        padding-right: 2px;
        background-clip: content-box;
        background-image: linear-gradient(to bottom, transparent 0, transparent 7px, white 7px, white 9px, transparent 9px, transparent 16px);
    }
}

/* banner */
.banner {
    height: 400px;
    position: relative;
    display: flex;
    background-image: url(fon.jpg);
    background-attachment: fixed;
    background-position: right;
    background-repeat: no-repeat;
}
@media (max-width: 768px) {
    .banner {
        height: 300px;
    }
}
.banner .container {
    height: 100%;
}
@media (max-width: 768px) {
    .banner .container {
        background-position: 0% 100%;
    }
}
.banner h1 {
    margin: 0;
    color: white;
    position: relative;
    z-index: 1;
    align-self: center;
    font-size: 54px;
    font-weight: 500;
}
.banner:after {
    content: "";
    display: block;
    background-color: #2d363e;
    position: absolute;
    left: 50%;
    top: 0;
    z-index: 0;
    width: 100vw;
    height: 100%;
    margin-left: -50vw;
    opacity: 0.7;
}

/* price */
.price {
    font-weight: 100;
    padding-top: 0;
    margin-top: -24px;
    line-height: 1.1;
}
@media (max-width: 768px) {
    .price {
        padding-left: 0;
        padding-right: 0;
    }
}
.price__cell.price__caption {
    color: #999;
    text-transform: uppercase;
}
.price__row {
    display: flex;
    width: 100%;
    padding: 16px 0;
    border-top: 1px solid #e5e5e5;
}
.price__row:not(:first-child):hover {
    background: #cc5656;
    color: white;
}
.price__row:first-child {
    border: 0;
}
.price__cell:first-child {
    width: 100%;
    padding: 0 12px;
}
.price__cell:last-child {
    min-width: 120px;
    max-width: 120px;
    padding: 0 12px;
    text-align: right;
}

/* tags */
.tags {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin-top: -24px;
    padding-top: 0;
}
.tag {
    display: flex;
    margin-right: 12px;
    margin-bottom: 12px;
    background: #999;
    padding: 3px 6px;
    color: white;
    border-radius: 6px;
    align-items: center;
    line-height: 1;
    height: 24px;
    font-size: 14px;
    cursor: pointer;
    min-width: 32px;
    justify-content: center;
}
.tag.active {
    background: #d40d0d;
}

/* utils */
.flex {
    display: flex;
}
.flex-center {
    display: flex;
    align-self: center;
}

